web/themes/quartiers_solidaires/assets/components/organisms/modal/modal.scss
@charset 'utf-8';

.modal-open {
  height: 100vh;
}

.modal-dialog {
  margin-bottom: 5vh;
  text-align: left;
}

.modal-header {
  padding-top: 0;
  padding-bottom: 0;
  flex-direction: column;
  flex-shrink: 0;

  .alert {
    margin-bottom: 0;

    .close {
      margin: 0;
    }
  }
}

.modal-content {
  max-height: 85vh;
  overflow: hidden;
}

.modal-title {
  font-weight: $font-weight-normal;
}

.modal-body {
  display: flex;
  flex-direction: column;
  overflow-y: auto;
}

.modal-footer {
  flex-shrink: 0;
}

.modal-full {
  .modal-content {
    margin-top: 107px;
    // 100vh - (.modal-dialog margin-bottom value) - (header height) - (floating buttons height)
    height: calc(95vh - 107px - 55px);
  }
}

// We sometimes need to have a modal look but it's not really a modal
.modal.force-show {
  display: block;
}

